# ztui

./: Cargo.toml  README.md
.github/workflows/: main.yaml
src/: app.rs  client.rs  config.rs  display.rs  main.rs  nets.rs  terminal.rs
