[package]
name = "ztui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = [ "full" ] }
crossterm = "*"
tui = "*"
anyhow = "*"
zerotier-one-api = "*"
http = "*"
reqwest = "*"
serde_json = "*"
serde = "*"
directories = "*"
