[package]
name = "ztui"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys_metrics = "*"
tokio = { version = "*", features = [ "full" ] }
crossterm = "*"
tui = "*"
anyhow = "*"
zerotier-one-api = "*"
zerotier-central-api = "*"
http = "*"
reqwest = "*"
serde_json = "*"
serde = "*"
directories = "*"
bat = { version = "*", default-features = false, features = [ "minimal-application" ] }
byte-unit = "*"
portable-pty = "*"
fancy-duration = { version = "*" }
time = { version = "^0.3", features = [ "local-offset" ] }
lazy_static = "*"
nix = "0.24"
signal = "*"
openssl = { version = "*", features = [ "vendored" ] }
tempfile = "*"
